# depgrapher

./: Makefile.am  NEWS  README  README.md  bootstrap.sh  configure.ac  depgrapher.in
example/src/: moo.js
example/src/foo/: bar.js
